[tool.poetry]
name = "nbox"
version = "0.9.14c22"
description = "ML Inference 🥶"
authors = [
  "NBX Research <research@nimblebox.ai>",
  "Yash Bonde <bonde.yash97@gmail.com>",
  "Aakash Kaushik <kaushikaakash7539@gmail.com>",
  "Akash Pathak <pathakvikash9211@gmail.com>",
  "Shubham Rao <cshubhamrao@gmail.com>",
]
homepage = "https://github.com/NimbleBoxAI/nbox"
repository = "https://github.com/NimbleBoxAI/nbox"
documentation = "https://nimbleboxai.github.io/nbox/"
license = "Apache-v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
randomname = "^0.1.3"
requests = "^2.25.1"
tabulate = "0.8.9"
protobuf = "4.21.1"
grpcio = "1.43.0"
Jinja2 = "3.0.3"
dill = "0.3.4"
python-json-logger = "2.0.2"
mypy-protobuf = "3.2.0" # this is used for generating nbox spec
fastapi = {version = "^0.78.0", optional = true}
uvicorn = {version = "^0.18.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
serving = ["fastapi", "uvicorn"]

[build-system]
requires = [
  "poetry-core>=1.0.0",
  "setuptools"
]

build-backend = "poetry.core.masonry.api"
