[tool.poetry]
name = "nbox"
version = "0.9.39"
description = "ML Inference 🥶"
authors = [
  "NBX Research <research@nimblebox.ai>",
  "Yash Bonde <bonde.yash97@gmail.com>",
  "Aakash Kaushik <kaushikaakash7539@gmail.com>",
  "Akash Pathak <pathakvikash9211@gmail.com>",
  "Shubham Rao <cshubhamrao@gmail.com>",
]
homepage = "https://github.com/NimbleBoxAI/nbox"
repository = "https://github.com/NimbleBoxAI/nbox"
documentation = "https://nimbleboxai.github.io/nbox/"
license = "Apache-v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
randomname = "^0.1.3"
requests = "^2.25.1"
tabulate = "0.8.9"
protobuf = "3.20.1"
mypy-protobuf = "3.2.0" # this is used for generating nbox spec
grpcio = "1.43.0"
Jinja2 = "3.0.3"
cloudpickle = "2.1.0"
python-json-logger = "2.0.2"
GitPython = "3.1.27"
gputil = "1.4.0"
psutil = "5.9.0"
fastapi = {version = "^0.78.0", optional = true}
uvicorn = {version = "^0.18.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
serving = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
# yes nimblebox will be all these things
nbox = "nbox.cli:main"
nbx = "nbox.cli:main"
nimblebox = "nbox.cli:main"

[build-system]
requires = [
  "poetry-core>=1.0.0",
  "setuptools"
]

build-backend = "poetry.core.masonry.api"
