[tool.poetry]
name = "nbox"
version = "0.13.0c6"
description = "ML Inference 🥶"
authors = [
  "NBX Research <research@nimblebox.ai>",
  "Yash Bonde <bonde.yash97@gmail.com>",
  "Aakash Kaushik <kaushikaakash7539@gmail.com>",
  "Akash Pathak <pathakvikash9211@gmail.com>",
  "Shubham Rao <cshubhamrao@gmail.com>",
]
homepage = "https://github.com/NimbleBoxAI/nbox"
repository = "https://github.com/NimbleBoxAI/nbox"
documentation = "https://nimbleboxai.github.io/nbox/"
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# astea = "^1.0"
tqdm = "4.64.0"
randomname = "^0.1.3"
requests = "^2.25.1"
tabulate = "0.8.9"
protobuf = "3.20.2"
mypy-protobuf = "3.2.0" # this is used for generating nbox spec
grpcio = "1.51.1"
Jinja2 = "3.0.3"
cloudpickle = "2.1.0"
python-json-logger = "2.0.2"
GitPython = "3.1.30"
gputil = "1.4.0"
psutil = "5.9.0"
dateparser = "1.1.7"
astea = "1.4"
fastapi = {version = "^0.95.1", optional = true}
uvicorn = {version = "^0.18.2", optional = true}

[tool.poetry.extras]
serving = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
nbx = "nbox.cli:main"

[build-system]
requires = [
  "poetry-core>=1.0.0",
  "setuptools"
]

build-backend = "poetry.core.masonry.api"
